test/kobra-code/semantic-errors/bad-for-statement.ks
for ($ a = 0; a < 3; a = 0):
    say b
end